--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
-
+@import 'fonts';
 // Variables
 @import 'variables';
 
