--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,6 +30,10 @@
 
 }
 ._vue-flash-msg-body {
+    & ._vue-flash-msg-body__content {
+        padding-top: 10px;
+    }
+
     &._vue-flash-msg-body_success {
         border: 1px solid $green !important;
         background-color: rgba($green, 0.68) !important;
