--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,8 @@
 @import "../fontawesome/scss/solid.scss";
 @import "../fontawesome/scss/brands.scss";
 
+@import "~vue-multiselect/dist/vue-multiselect.min.css";
+
 .roomicon {
     width:40px;
     height: 40px;
