--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,7 +30,13 @@
 
 }
 ._vue-flash-msg-body {
+    width: 300px !important;
+
     & ._vue-flash-msg-body__content {
+        h3 {
+            font-size: $h5-font-size;
+        }
+
         padding-top: 10px;
     }
 
