Updated pagination active color, Updated environment variables name, UserController methods, Added Requests for Update and Create

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -85,3 +85,9 @@
         }
     }
 }
+
+// Pagination current page background
+.page-item.active .page-link {
+    background-color: #80BA27 !important;
+    border-color: #80BA27 !important;
+}
