--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,6 +38,18 @@
     background-color: darken(#FFF, 7.5%) !important;
 }
 
+.setting-nav-link {
+    &:hover {
+        color: $green;
+        background-color: rgba($green, 0.5);
+    }
+}
+
+.setting-nav-link-active {
+    @extend .setting-nav-link, :hover;
+    font-weight: 600;
+}
+
 ._vue-flash-msg-body {
     width: 300px !important;
 
