Github comments, add server panic, simplify build history

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,10 @@
     color: #FFF;
 }
 
+.btn-warning {
+    color: #FFF;
+}
+
 // Font Awesome
 @import "../fontawesome/scss/fontawesome.scss";
 @import "../fontawesome/scss/solid.scss";
