--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -152,3 +152,13 @@ body {
     bottom: 0;
     width: 100%;
 }
+
+.td-max-width-0 {
+    max-width: 0;
+}
+
+.text-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
