Add comments to action column

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -187,5 +187,6 @@ body {
 }
 
 .actionColumn{
-    width: calc(126px + 0.75rem);
+    // width of the default three action button view, edit, delete + cell padding
+    width: calc(126px + 2 * #{$table-cell-padding});
 }
