Fix github comments

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -31,3 +31,6 @@ $fa-font-path:        "../webfonts";
 
 $enable-rounded: false;
 $footer-height: 25px;
+
+$action-column-button-width: 44px;
+$action-column-button-height: 38px;
