--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,7 +25,11 @@
 
 .roomicon {
     width: 40px;
+    min-width: 40px;
+    max-width: 40px;
     height: 40px;
+    min-height: 40px;
+    max-height: 40px;
     background: $green;
     display: grid;
     place-items: center center;
