--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -138,6 +138,15 @@
         padding: 8px 40px 8px 8px;
     }
 
+    .multiselect__single {
+        margin-bottom: 3px;
+        margin-top: 3px;
+    }
+
+    .multiselect__select {
+        height: 42px;
+    }
+
     .multiselect__placeholder{
         margin-bottom: 0px;
     }
