Implement configurable help link

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -215,3 +215,10 @@ body {
         height: $action-column-button-height;
     }
 }
+
+
+.nav-icon-item {
+    font-size: 1.25rem;
+    vertical-align: -35%;
+    display: inline;
+}
