--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,38 +1,42 @@
-// Body
+// Body background
 $body-bg: #f8fafc;
 
 // Typography
-
 $font-family-sans-serif: 'Source Sans Pro', sans-serif;
 //$font-size-base: 0.9rem;
 //$line-height-base: 1.6;
 
 // Colors
 $blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
 $red: #9C132E;
 $orange: #F4AA00;
-$yellow: #ffed4a;
 $green: #80BA27;
-$teal: #4dc0b5;
 $cyan: #6cb2eb;
 
+// Branding color
+$primary: $green;
+$link-color: $primary;
 
+// Recommended to use a black/grey, color is used for some buttons and most text
+$secondary: #343a40;
+$body-color: $secondary;
+
+// Semantic colors
+$success: $green;
+$info: $blue;
 $warning: $orange;
+$danger: $red;
 
-
-$body-color: #495057;
-
-$link-color: $green;
-
-$fa-font-path:        "../webfonts";
-
+// Elements to have rounded edges
 $enable-rounded: false;
+
+// Height of footer
 $footer-height: 25px;
 
+// Size of profile picture in membership list
+// profile images are cropped to 100px on upload, so recommended to not set display size bigger than 100px
+$profile-image-width: 40px;
+
+// Size of a single action button (view, edit, delete) in the admin ui
 $action-column-button-width: 44px;
 $action-column-button-height: 38px;
-
-$profile-image-width: 40px;
