--- a/resources/sass/theme/default/_variables.scss
+++ b/resources/sass/theme/default/_variables.scss
@@ -32,7 +32,7 @@ $btn-text-color: ("primary": null, "secondary": null, "success": null, "info": n
 $btn-text-color-hover: ("primary": null, "secondary": null, "success": null, "info": null, "warning": null, "danger": null);
 
 // Elements to have rounded edges
-$enable-rounded: false;
+$enable-rounded: true;
 
 // Height of footer
 $footer-height: 25px;
