--- a/resources/sass/theme/thm/app.scss
+++ b/resources/sass/theme/thm/app.scss
@@ -1,3 +1,4 @@
 // To customize the colors, edit _variables.scss
 @import 'variables';
-@import '../../app';
+@import 'fonts';
+@import '../../base';
