Add readme and update changelog

--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -1,5 +1,5 @@
 // Bootstrap
-@import "override/variables";
+@import "theme/default/variables";
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-vue/src/index';
 @import "override/buttons";
