--- a/resources/sass/theme/thm/_variables.scss
+++ b/resources/sass/theme/thm/_variables.scss
@@ -1,3 +1,5 @@
+// Overrides variables of app/variables and bootstrap
+
 // Colors
 $blue: #3490dc;
 $red: #9C132E;
@@ -24,7 +26,7 @@ $btn-text-color: ("primary": #FFF, "success": #FFF, "warning": #FFF);
 $btn-text-color-hover: ("primary": #FFF, "success": #FFF, "warning": #FFF);
 
 // Elements to have rounded edges
-$enable-rounded: true;
+$enable-rounded: false;
 
 // Typography
 $font-family-sans-serif: 'Source Sans Pro', sans-serif;
