--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -2,6 +2,9 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-vue/src/index';
 @import "override/buttons";
+@import "override/badges";
+@import "override/background";
+@import "override/nav";
 @import "override/tables";
 @import "override/pagination";
 
