--- a/resources/sass/theme/thm/_variables.scss
+++ b/resources/sass/theme/thm/_variables.scss
@@ -20,10 +20,12 @@ $info: $blue;
 $warning: $orange;
 $danger: $red;
 
-// Overwrite button text color, by default automatically set to a light or dark color
+// Overwrite button and badge text color, by default automatically set to a light or dark color
 // depending on the best contrast (see https://getbootstrap.com/docs/4.0/getting-started/theming/#color-contrast)
 $btn-text-color: ("primary": #FFF, "success": #FFF, "warning": #FFF);
 $btn-text-color-hover: ("primary": #FFF, "success": #FFF, "warning": #FFF);
+$badge-text-color: ("primary": #FFF, "success": #FFF, "warning": #FFF);
+$background-text-color: ("primary": #FFF, "success": #FFF, "warning": #FFF);
 
 // Elements to have rounded edges
 $enable-rounded: false;
