251 Bugfix color customization (#255)
* Bugfix color customization

* Remove enforced white-text

--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -1,8 +1,10 @@
 // Bootstrap
-@import "theme/default/variables";
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-vue/src/index';
 @import "override/buttons";
+@import "override/badges";
+@import "override/background";
+@import "override/nav";
 @import "override/tables";
 @import "override/pagination";
 
