Fix missing body-bg color on THM theme

--- a/resources/sass/theme/thm/_variables.scss
+++ b/resources/sass/theme/thm/_variables.scss
@@ -1,5 +1,8 @@
 // Overrides variables of app/variables and bootstrap
 
+// Body background
+$body-bg: #f8fafc;
+
 // Colors
 $blue: #3490dc;
 $red: #9C132E;
