--- a/resources/sass/override/_buttons.scss
+++ b/resources/sass/override/_buttons.scss
@@ -1,13 +1,9 @@
 // Custom button text color
-@each $name, $color in $btn-text-color {
+@each $name, $color in $text-color {
     @if $color {
         .btn-#{$name} {
             color: $color;
         }
-    }
-}
-@each $name, $color in $btn-text-color-hover {
-    @if $color {
         .btn-#{$name}:hover {
             color: $color;
         }
