--- a/resources/sass/override/_nav.scss
+++ b/resources/sass/override/_nav.scss
@@ -1,6 +1,4 @@
 // Use custom text-color for primary button in nav-tab
 .nav-tabs .nav-link.active.bg-primary {
-    @if (map-has-key($btn-text-color, "primary")) {
-        color: map-get($btn-text-color, "primary");
-    }
+    color: text-color("primary");
 }
