--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -10,6 +10,7 @@
 @import "override/pagination";
 
 // Font Awesome
+$fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
 @import "@fortawesome/fontawesome-free/scss/solid";
 
