Refactor user management (#277)
* Use laravel locale for email notification

* Store session in db

* Refactor user management

* Wrap fields in form, fix lang, add view password

* Add english translation

* Improve permissions and feedback

* Fix cs

* Fix validation error

* Add tests for changing pw and email

* Add test to check email and pw change for other authenticators

* Add test for partial attribute updates

* Add check if sessions are terminated on password change

* Add test for session controller

* Refactor user update tests

* Fix tests

* Remove notification tests, simplify translation

* Fix cs

* Refactor password reset email

* Add multiple throttles

* Add backend tests

* Fix ui

* Remove password from error messages and do not trim password fields in requests

* Fix cs

* Throttle verify email requests

* Fix locale

* Add view user view test, fix router and index test

* Run workflow on push and pr

* Improve layout

* Fix timezone not disabled

* Cleanup new user view

* Add test for new user view

* Add test for component events

* Add locale select component test

* Add tests for input components, improve loading on error

* Add error handling to session component, add tests

* Fix translation bug

* Change indentation

* fix too many spaces in translation

* Resolve github comment

* Fix test

* Fix cs and tests

* Revert CI change

* Fix lang, cleanup, add and fix tests

* Add verify email test

* Add profile component tests

* Add more tests for profile component

* Add more tests for Profile Component

* Add tests for other settings component

* Improve email settings component, add tests

* Improve password component, add tests

* Improve error feedback, add test to role and perm. component

* Fix error in test

* Add test, add reload on server error

* Fix error in test

* Update changelog

* Update changelog

---------


--- a/resources/sass/override/_buttons.scss
+++ b/resources/sass/override/_buttons.scss
@@ -4,8 +4,12 @@
         .btn-#{$name} {
             color: $color;
         }
+        .btn-#{$name}.disabled {
+            color: $color;
+        }
         .btn-#{$name}:hover {
             color: $color;
         }
+
     }
 }
