--- a/resources/sass/override/_multiselect.scss
+++ b/resources/sass/override/_multiselect.scss
@@ -14,13 +14,23 @@
 
 .multiselect-form-control {
     @extend .form-control;
-    padding: 0;
-    border: none;
+    padding: 2px;
     height: auto;
 
+    border: $input-border-width solid $input-border-color;
+    @include border-radius($input-border-radius, 0);
+    @include box-shadow($input-box-shadow);
+
+    &.is-invalid {
+        background-position: right $input-height-inner center;
+        .multiselect__tags {
+            margin-right: $input-height-inner-half;
+        }
+    }
+
     .multiselect__tags {
-        border-radius: 0;
-        padding: 8px 40px 8px 8px;
+        border: none;
+        padding: 6px 40px 6px 10px;
     }
 
     .multiselect__single {
@@ -30,9 +40,16 @@
 
     .multiselect__select {
         height: 42px;
+        &:before {
+            border-color: #000 transparent transparent;
+        }
     }
 
     .multiselect__placeholder{
         margin-bottom: 0;
+        font-family: $input-font-family;
+        @include font-size($input-font-size);
+        font-weight: $input-font-weight;
+        color: $input-color;
     }
 }
