--- a/resources/sass/app/_general.scss
+++ b/resources/sass/app/_general.scss
@@ -18,3 +18,7 @@ body {
     color: $input-color;
     opacity: 1;
 }
+.collapsed > .when-open,
+.not-collapsed > .when-closed {
+    display: none;
+}
