Add docblocks to functions and code comments

--- a/resources/sass/app/_room.scss
+++ b/resources/sass/app/_room.scss
@@ -94,3 +94,8 @@
     display: inline-block;
     margin-right: 5px;
 }
+
+.room-bulk-import-preview {
+    overflow-y: auto;
+    max-height: 200px;
+}
