Bulk import users (#299)
* Add button and modal for bulk import of users

* Add backend for bulk import

* Add tests

* Update changelog

---------

Co-authored-by: Samuel Weirich <4281791+SamuelWei@users.noreply.github.com>

--- a/resources/sass/app/_general.scss
+++ b/resources/sass/app/_general.scss
@@ -18,6 +18,10 @@ body {
     color: $input-color;
     opacity: 1;
 }
+.collapsed > .when-open,
+.not-collapsed > .when-closed {
+    display: none;
+}
 
 
 .is-invalid .ProseMirror{
