CSS BEM convention

--- a/resources/sass/app/_profile-image.scss
+++ b/resources/sass/app/_profile-image.scss
@@ -1,7 +1,4 @@
+.profile-image,
 .profile-image-column {
-    width: $profile-image-width;
-}
-
-.profile-image {
     width: $profile-image-width;
 }
