--- a/resources/sass/app/_room.scss
+++ b/resources/sass/app/_room.scss
@@ -1,32 +1,40 @@
-.room-info-icon{
-    width: 1rem;
-    margin-right: 0.75rem;
-    flex-shrink: 0;
-    text-align: center
-}
-
-.room-info-text{
-    flex-grow: 1;
-}
-
-.room-info-icon{
-    width: 1.5rem;
-    margin-right: 0.5rem;
-    text-align: center;
-    flex-shrink: 0
+.room-details {
+    &__icon{
+        width: 1.5rem;
+        margin-right: 0.5rem;
+        flex-shrink: 0;
+        text-align: center
+    }
+    
+    &__text{
+        flex-grow: 1;
+    }
 }
 
 .room-card{
     pointer-events: auto;
     cursor: pointer;
-    &.running{
+    
+    &--running{
         border-color: $green;
         border-width: 2.5px;
+    }
+
+    &__buttons {
+        z-index: 2;
+        position: relative;
+    
+        .btn{
+            margin-left: 0.25rem;
+            padding: 0;
+            height: 25px;
+            width: 25px;
+            font-size: 12px;
+        }
     }
 }
 
 .room-dropdown {
-
     ul {
         i {
             width: 1rem;
@@ -34,21 +42,9 @@
             text-align: center;
         }
     }
-
 }
 
-.room-card-buttons {
-    z-index: 2;
-    position: relative;
 
-    .btn{
-        margin-left: 0.25rem;
-        padding: 0;
-        height: 25px;
-        width: 25px;
-        font-size: 12px;
-    }
-}
 
 .room-card:hover{
     background-color: darken(#FFF, 7.5%) !important;
