--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -18,7 +18,7 @@ $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 @import "override/toast";
 
 // Vue Multi-Select
-@import "vue-multiselect/dist/vue-multiselect.min.css";
+@import "vue-multiselect/dist/vue-multiselect.css";
 @import "override/multiselect";
 
 // Application specify style
